--- a/src/main/resources/templates/admin_registration.html
+++ b/src/main/resources/templates/admin_registration.html
@@ -2,49 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JFT - User Registration</title>
+    <title>JFT - Admin Registration</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href = "index.css">
+    <link rel="stylesheet" href = "admin_registration.css">
 </head>
 <body>
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3>User Registration</h3>
+                <h3>Admin Registration</h3>
             </div>
             <div class="card-body">
-                <form action="" method="post">
+                <form action="home" method="post">
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Name">
+                        <input type="text" class="form-control" placeholder="name">
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Username">
+                        <input type="text" class="form-control" placeholder="username">
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Phone Number">
+                        <input type="text" class="form-control" placeholder="phone number">
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-key"></i></span>
                         </div>
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="password">
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Re-enter Password">
+                        <input type="text" class="form-control" placeholder="re-enter password">
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-icon">
+                            <span class="input-group-text"><i class="fa fa-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="company">
                     </div>
                     <div class="row align-items-center remember">
                         <input type="checkbox">Remember Me
