--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,26 +15,37 @@
                 <h3>Login</h3>
             </div>
             <div class="card-body">
-                <form action="" method="post">
+                <form action="customer_profile" method="post">
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Username">
+                        <input type="text" name="username" class="form-control" placeholder="username">
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-icon">
                             <span class="input-group-text"><i class="fa fa-key"></i></span>
                         </div>
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" name="password" class="form-control" placeholder="password">
                     </div>
-                    <div class="row align-items-center remember">
+                    <div class="row align-items-center remember" style="padding: 10px;">
                         <input type="checkbox">Remember Me
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Login" class="btn float-right login_btn">
                     </div>
                 </form>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-center links">
+                    Don't have an account?<a href="customer_registration.html">Register</a>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <a href="" style="text-decoration: none; color: #FFC312;">Forgot your password?</a>
+                </div>
+                <div class="d-flex justify-content-center ">
+                    <a href="admin_registration.html" style="text-decoration: none; color: #FFC312;">Register as Admin!</a>
+                </div>
             </div>
         </div>
     </div>
